# train_spacy

./: README.md  pyproject.toml  train.spacy  train_spacy.py
