[tool.poetry]
name = "train-spacy"
version = "0.1.0"
description = ""
authors = ["Marco.Petrella <marco.petrella@ksb.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.8.2"
spacy-lookups-data = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
